# voxels-cpp

./: CMakeLists.txt  README.md
stb/: CMakeLists.txt
svogen/: CMakeLists.txt  points.pat  svo.pat  svogen.cpp  tiny_obj_loader.h  voxelizer.h
svogen/svogen/: svogen.h
voxels/: CMakeLists.txt  main.cpp
